fix: tests on UrlCheckRepository